--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -71,7 +71,7 @@ The table below provides an overview about each of these elements and their usag
 | `Expiry`   | UNIX time in seconds                     | As per Whisper default           |      |
 | `TTL`      | Time-to-live in seconds                  | TTL recommendations              | 6.   |
 | `Topic`    | Probabilistic hint about encryption key  | As per OpenVASP Envelope Types   | 5.   |
-| `AESNonce` | Salt used in symmetric encryption        | Randomly set for each *Envelope* |      |
+| `AESNonce` | Salt (96-bit) for symmetric encryption   | Randomly set for each *Envelope* |      |
 | `Data`     | Contains encrypted Whisper *Message*     | Defined *Message* structure      | 4.   |
 | `EnvNonce` | Nonce used for Proof-of-Work calculation | As per Whisper default           |      |
 
@@ -90,18 +90,18 @@ Upon receipt of an *Envelope*, if the node detects a known topic, it tries to de
 
 The table below shows the structure of the OpenVASP *Payload*. The last four elements are present depending on the value of the `instruction` element.
 
-| Element        | Length         | Present | Description                                       | See   |
-| -------------- | -------------- | ------- | ------------------------------------------------- | :---- |
-| `version`      | 1 byte         | Always  | OpenVASP *Payload* version, currently set to zero |       |
-| `instruction`  | 3 bits         | Always  | Instructions to control a *Connection*            | 4.1.1 |
-| `flags`        | 5 bits         | Always  | Reserved for future use, must be set to zero      |       |
-| `sender`       | 6 bytes        | Always  | Sender's VASP Identity                            |       |
-| `connectionID` | 4 bytes        | Always  | *Connection* identifier                           |       |
-| `envelope`     | 4 bytes        | Always  | Randomly set *Envelope* identifier                |       |
-| `envelopeACK`  | 4 bytes        |         | Reference to an *Envelope* identifier             |       |
-| `returnTopic`  | 4 bytes        |         | Return topic                                      |       |
-| `ecdhPK`       | 32 bytes       |         | ECDH public key                                   |       |
-| `ovMessage`    | arbitrary size |         | Session Message (JSON)                            |       |
+| Element       | Length         | Present | Description                                       | See   |
+| ------------- | -------------- | ------- | ------------------------------------------------- | :---- |
+| `version`     | 1 byte         | Always  | OpenVASP *Payload* version, currently set to zero |       |
+| `instruction` | 3 bits         | Always  | Instructions to control a *Connection*            | 4.1.1 |
+| `flags`       | 5 bits         | Always  | Reserved for future use, must be set to zero      |       |
+| `sender`      | 6 bytes        | Always  | Sender's VASP Identity                            |       |
+| `connection`  | 16 bytes       | Always  | *Connection* identifier                           |       |
+| `envelopeID`  | 16 bytes       | Always  | Randomly set *Envelope* identifier                |       |
+| `envelopeACK` | 16 bytes       |         | Reference to an *Envelope* identifier             |       |
+| `returnTopic` | 4 bytes        |         | Return topic                                      |       |
+| `ecdhPK`      | 32 bytes       |         | ECDH public key                                   |       |
+| `ovMessage`   | arbitrary size |         | Session Message (JSON)                            |       |
 
 #### 4.1.1. Instructions
 
@@ -109,12 +109,12 @@ The `instruction` element can have the following values:
 
 | Value | Sent by                    | Description                                        | Used in |
 | ----- | -------------------------- | -------------------------------------------------- | ------- |
+| `000` | *Active* or *Passive Node* | Acknowledge *Envelope* receipt (ACK)               | 5.6     |
 | `001` | *Active Node*              | Inviting for a *Connection* (INVITE)               | 6.1     |
 | `010` | *Passive Node*             | Accepting a *Connection* invitation (ACCEPT)       | 6.2     |
 | `011` | *Passive Node*             | Denying a *Connection* invitation (DENY)           | 6.3     |
 | `100` | *Active* or *Passive Node* | Sending an *Envelope* over a *Connection* (UPDATE) | 6.4     |
 | `101` | *Active* or *Passive Node* | Closing a *Connection* (CLOSE)                     | 6.5     |
-| `000` | *Active* or *Passive Node* | Acknowledge *Envelope* receipt (ACK)               | 6.6     |
 
 #### 4.1.2. Acknowledgment
 
@@ -183,7 +183,28 @@ If one of the above mentioned checks fail, the Envelope is ignored and deleted.
 
 If required, the *Envelope* is acknowledged as per following steps.
 
-2. 
+1. Read `connection` value from the *Payload* of the *Envelope* to be acknowledged.
+
+2. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
+
+   | Element       | Value                                                        |
+   | :------------ | :----------------------------------------------------------- |
+   | `instruction` | `000`                                                        |
+   | `connection`  | `connection` value from the *Payload* of the *Envelope* to be acknowledged |
+   | `envelopeACK` | `envelopeID` value from the *Payload* of the *Envelope* to be acknowledged |
+
+   
+
+3. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
+
+   | Element | Value / Specification                                        |
+   | ------- | ------------------------------------------------------------ |
+   | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection` values. |
+   | `Data`  | *Payload* created in step 2, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection` values. |
+
+   
+
+4. Send Envelope created in step 3.
 
 ## 6. Implementing the Session Layer
 
@@ -202,10 +223,10 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 ##### 6.1.1.1. Session Layer Input
 
-| Element          | Type           | Description                        | See                 |
-| ---------------- | -------------- | ---------------------------------- | :------------------ |
-| `receiver`       | Hex(32-bit)    | VASP Identifier of the *Responder* | OVIP-7, section 2.1 |
-| `sessionMessage` | arbitrary size | Session Request Message JSON       | OVIP-7, section 4.1 |
+| Element          | Description                        | See                 |
+| ---------------- | ---------------------------------- | :------------------ |
+| `receiver`       | VASP Identifier of the *Responder* | OVIP-7, section 2.1 |
+| `sessionMessage` | Session Request Message JSON       | OVIP-7, section 4.1 |
 
 ##### 6.1.1.2. Processing steps
 
@@ -215,28 +236,28 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 4. Generate random `topicA` the *Node* will listen for to identify incoming *Envelopes* sent over this *Connection*.
 
-5. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the elliptic curve Diffie–Hellman (ECDH) key-exchange protocol.
+5. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the known `transportKey` using the X25519 key-exchange protocol.
 
-6. Derive `sharedKey` based on the `transportKey` and the `ecdhPublic`.
+6. Derive `sharedKey` based on `transportKey` and  `ecdhPrivate`.
 
 8. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
 
-   | Element        | Length         | Value                  |
-   | :------------- | :------------- | :--------------------- |
-   | `instruction`  | 3 bits         | `001`                  |
-   | `connectionID` | 4 bytes        | `connectionIdentifier` |
-   | `returnTopic`  | 4 bytes        | `topicA`               |
-   | `ecdhPK`       | 32 bytes       | `ecdhPublic`           |
-   | `ovMessage`    | arbitrary size | `sessionMessage`       |
+   | Element       | Value                  |
+   | :------------ | :--------------------- |
+   | `instruction` | `001`                  |
+   | `connection`  | `connectionIdentifier` |
+   | `returnTopic` | `topicA`               |
+   | `ecdhPK`      | `ecdhPublic`           |
+   | `ovMessage`   | `sessionMessage`       |
 
    
 
-9. Create *Envelope* out of the elements defined in section 3. and the specified values in the table below.</br>
+9. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below.</br>
 
    | Element | Value / Specification                                        |
    | ------- | ------------------------------------------------------------ |
    | `Topic` | `receiver`                                                   |
-   | `Data`  | OpenVASP Payload (see step 6), asymmetrically encrypted with the `transportKey` using SECP-256k1 |
+   | `Data`  | *Payload* created in step 6, asymmetrically encrypted with the `transportKey` using SECP-256k1 as per Whisper standard. |
 
    
 
@@ -277,98 +298,42 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 ##### 6.1.2.1. Inbound Envelope Validation
 
-Text
+Perform validation steps (see 5.5).
 
-##### 6.1.2.2. Processing Steps
+##### 6.1.2.2. Acknowledge Envelope Receipt
 
-1. Read `sender`, `connectionID`, `envelope`, `returnTopic`, `ecdhPK` and `ovMessage` from payload of received *Envelope*.
+Send acknowledgement (see 5.6).
+
+##### 6.1.2.3. Processing Steps
+
+1. Read `connection`, `envelopeID`, `returnTopic`, `ecdhPK` and `ovMessage` from the *Payload* of received *Envelope*.
 
 2. Generate random `topicB` the *Node* will listen for to identify incoming *Envelopes* sent over this *Connection*.
 
-3. Derive `sharedKey` based on the `ecdhPK` and the `ecdhPublic`.
+3. Derive `sharedKey` based on the *Responder's* own `transportKey` and `ecdhPK` received in step 1 using the X25519 key-exchange protocol.
 
-4. 
+4. Add item to the set of *Connections*:</br>
 
-5. Add item to the set of *Connections*:</br>
+   | Element         | Value                                                  |
+   | :-------------- | :----------------------------------------------------- |
+   | `isPermanent`   | `False`                                                |
+   | `connection`    | `connection` from the *Payload* of received *Envelope* |
+   | `inboundTopic`  | `topicB`                                               |
+   | `outboundTopic` | `returnTopic`                                          |
+   | `key`           | `sharedKey`                                            |
 
-   | Element         | Value          |
-   | :-------------- | :------------- |
-   | `isPermanent`   | `False`        |
-   | `connection`    | `connectionID` |
-   | `inboundTopic`  | `topicB`       |
-   | `outboundTopic` | `returnTopic`  |
-   | `key`           | `sharedKey`    |
+   
 
+5. Make the *Node* listen to incoming *Envelopes* associated to this *Connection*.
 
+##### 6.1.2.4. Notification to Session Layer
 
-9. Make the *Node* listen to incoming *Envelopes* associated to this *Connection*.
-
-
+- Notify that session invitation has been received.
+- Provide `connectionIdentifier` so that the session layer can refer to it throughout the session lifecycle.
+- Provide `ovMessage`
 
 
 ### 6.2. Accepting a Session Initiation
-
-#### 6.2.1. Session Layer Input
-
-| Element                | Type           | Description                | See                 |
-| :--------------------- | :------------- | :------------------------- | :------------------ |
-| `connectionIdentifier` |                | Connection Identifier      | 6.1.2               |
-| `sessionMessage`       | arbitrary size | Session Reply Message JSON | OVIP-7, section 4.2 |
-
-#### 6.2.2. Processing steps
-
-1. Retrieve public `transportKey` available from the `receiver`'s VASP Contract.
-
-2. Generate random `connectionIdentifier`.
-
-3. Generate random `topicA` the *Node* will listen for to identify incoming *Envelopes* sent over this *Connection*.
-
-4. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the elliptic curve Diffie–Hellman (ECDH) key-exchange protocol.
-
-5. Derive `sharedKey` based on the `transportKey` and the `ecdhPublic`.
-
-6. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
-
-   | Element       | Length         | Value                  |
-   | :------------ | :------------- | :--------------------- |
-   | `instruction` | 3 bits         | `001`                  |
-   | `connection`  | 4 bytes        | `connectionIdentifier` |
-   | `returnTopic` | 4 bytes        | `topicA`               |
-   | `ecdhPK`      | 32 bytes       | `ecdhPublic`           |
-   | `ovMessage`   | arbitrary size | `sessionMessage`       |
-
-   
-
-7. Create *Envelope* out of the elements defined in section 3. and the specified values in the table below.</br>
-
-   | Element | Value / Specification                                        |
-   | :------ | :----------------------------------------------------------- |
-   | `Topic` | `receiver`                                                   |
-   | `Data`  | OpenVASP Payload (see step 6), asymmetrically encrypted with the `transportKey` using SECP-256k1 |
-
-   
-
-8. Add item to the set of *Connections*:</br>
-
-   | Element        | Value                           |
-   | :------------- | :------------------------------ |
-   | `connection`   | `connectionIdentifier`          |
-   | `topic`        | `topicA`                        |
-   | `key`          | `sharedKey`                     |
-   | `lastEnvelope` | *Envelope* identifier (see 4.1) |
-   | `ackd`         | `False`                         |
-   | `expiry`       | Current time + 900 seconds      |
-   | `resends`      | `0`                             |
-
-
-
-9. Make the *Node* listen to incoming *Envelopes* associated to this Connection.
-
-10. Send *Envelope* created in step 7.
-
-#### 6.2.3. Feedback to Session Layer
-
-Return that session initiations has taken place.
 
 
 
