--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -65,15 +65,15 @@ Whisper *Envelopes* are the packets sent and received by Whisper nodes. Once dec
 
 The table below provides an overview about each of these elements and their usage as part of OpenVASP.
 
-| Element    | Description                              | OpenVASP Usage                   | See  |
-| :--------- | :--------------------------------------- | :------------------------------- | :--- |
-| `Version`  | Currently one byte containing zero       | As per Whisper default           |      |
-| `Expiry`   | UNIX time in seconds                     | As per Whisper default           |      |
-| `TTL`      | Time-to-live in seconds                  | TTL recommendations              | 6.   |
-| `Topic`    | Probabilistic hint about encryption key  | As per OpenVASP Envelope Types   | 5.   |
-| `AESNonce` | Salt (96-bit) for symmetric encryption   | Randomly set for each *Envelope* |      |
-| `Data`     | Contains encrypted Whisper *Message*     | Defined *Message* structure      | 4.   |
-| `EnvNonce` | Nonce used for Proof-of-Work calculation | As per Whisper default           |      |
+| Element    | Description                              | OpenVASP Usage                   | See   |
+| :--------- | :--------------------------------------- | :------------------------------- | :---- |
+| `Version`  | Currently one byte containing zero       | As per Whisper default           |       |
+| `Expiry`   | UNIX time in seconds                     | As per Whisper default           |       |
+| `TTL`      | Time-to-live in seconds                  | As indicated in this document    | 5./6. |
+| `Topic`    | Probabilistic hint about encryption key  | As indicated in this document    | 5./6. |
+| `AESNonce` | Salt (96-bit) for symmetric encryption   | Randomly set for each *Envelope* |       |
+| `Data`     | Contains encrypted Whisper *Message*     | Defined *Message* structure      | 4.    |
+| `EnvNonce` | Nonce used for Proof-of-Work calculation | As per Whisper default           |       |
 
 ## 4. Message Level
 
@@ -91,7 +91,7 @@ Upon receipt of an *Envelope*, if the node detects a known topic, it tries to de
 The table below shows the structure of the OpenVASP *Payload*. The last four elements are present depending on the value of the `instruction` element.
 
 | Element       | Length         | Present | Description                                       | See   |
-| ------------- | -------------- | ------- | ------------------------------------------------- | :---- |
+| :------------ | :------------- | :------ | :------------------------------------------------ | :---- |
 | `version`     | 1 byte         | Always  | OpenVASP *Payload* version, currently set to zero |       |
 | `instruction` | 3 bits         | Always  | Instructions to control a *Connection*            | 4.1.1 |
 | `flags`       | 5 bits         | Always  | Reserved for future use, must be set to zero      |       |
@@ -108,7 +108,7 @@ The table below shows the structure of the OpenVASP *Payload*. The last four ele
 The `instruction` element can have the following values:
 
 | Value | Sent by                    | Description                                        | Used in |
-| ----- | -------------------------- | -------------------------------------------------- | ------- |
+| :---- | :------------------------- | :------------------------------------------------- | :------ |
 | `000` | *Active* or *Passive Node* | Acknowledge *Envelope* receipt (ACK)               | 5.6     |
 | `001` | *Active Node*              | Inviting for a *Connection* (INVITE)               | 6.1     |
 | `010` | *Passive Node*             | Accepting a *Connection* invitation (ACCEPT)       | 6.2     |
@@ -167,7 +167,27 @@ Queue items have the following properties:
 | `resends`    | Number of times `envelope` had to be resent                  |
 | `connection` | Identifier of the associated *Connection*                    |
 
-### 5.5. Validating Inbound Envelopes
+#### 5.4.1. Periodical Check
+
+The *Node* checks regularly for each item in the Outbound Envelope Queue whether its `expiry` time has been reached.
+
+If this is the case, the respective *Envelope* is resent, the `expiry` time is reset and the value for `resents` is increased by one.
+
+*Nodes* should resend *Envelopes* not being acknowledged with an increasingly larger TTL values (e.g. doubling the TTL with each resend).
+
+#### 5.4.2. Connection Interruption
+
+*Nodes* must define a maximal number of resends for *Envelopes* not getting acknowledged.
+
+If this limit is reached for an item in the Outbound Envelope Queue, the respective *Connection* is considered interrupted.
+
+In such a case, the *Node* must:
+
+1. Delete the respective *Connection* item from the *Connection* set.
+2. Delete the respective item from the Outbound Envelope Queue.
+3. Notify the session layer's *Exception Handling* (see OVIP-7, 3.1) about the interruption.
+
+### 5.5. Validating & Decrypting Inbound Envelopes
 
 Inbound *Envelopes* must be validated as per following steps.
 
@@ -185,7 +205,7 @@ If required, the *Envelope* is acknowledged as per following steps.
 
 1. Read `connection` value from the *Payload* of the *Envelope* to be acknowledged.
 
-2. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
+2. Create the *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
 
    | Element       | Value                                                        |
    | :------------ | :----------------------------------------------------------- |
@@ -200,11 +220,19 @@ If required, the *Envelope* is acknowledged as per following steps.
    | Element | Value / Specification                                        |
    | ------- | ------------------------------------------------------------ |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection` values. |
-   | `Data`  | *Payload* created in step 2, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection` values. |
+   | `Data`  | *Message* inclusing *Payload* created in step 2, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection` values. |
 
    
 
 4. Send Envelope created in step 3.
+
+### 5.7. Processing Acknowledgements for Sent Envelopes
+
+Received OpenVASP *Envelopes* of type ACK are processed as per following steps.
+
+1. Read `envelopeACK` value from the *Payload* of the *Envelope* received.
+2. Lookup item in the Outbound Envelope Queue (see 5.4) based on matching `envelopeID`/`envelopeACK` values
+3. If a match can be found, delete the item from the queue.
 
 ## 6. Implementing the Session Layer
 
@@ -219,14 +247,14 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 ### 6.1. Initiating a Session
 
-#### 6.1.1. Active Node Initiates Session
+#### 6.1.1. Active Node Sends Session Invitation
 
 ##### 6.1.1.1. Session Layer Input
 
 | Element          | Description                        | See                 |
-| ---------------- | ---------------------------------- | :------------------ |
+| :--------------- | :--------------------------------- | :------------------ |
 | `receiver`       | VASP Identifier of the *Responder* | OVIP-7, section 2.1 |
-| `sessionMessage` | Session Request Message JSON       | OVIP-7, section 4.1 |
+| `sessionMessage` | Session Request Message            | OVIP-7, section 4.1 |
 
 ##### 6.1.1.2. Processing steps
 
@@ -240,7 +268,7 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 6. Derive `sharedKey` based on `transportKey` and  `ecdhPrivate`.
 
-8. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
+8. Create the *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
 
    | Element       | Value                  |
    | :------------ | :--------------------- |
@@ -257,7 +285,7 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
    | Element | Value / Specification                                        |
    | ------- | ------------------------------------------------------------ |
    | `Topic` | `receiver`                                                   |
-   | `Data`  | *Payload* created in step 6, asymmetrically encrypted with the `transportKey` using SECP-256k1 as per Whisper standard. |
+   | `Data`  | *Message* inclusing *Payload* created in step 6, asymmetrically encrypted with the `transportKey` using SECP-256k1 as per Whisper standard. |
 
    
 
@@ -278,7 +306,7 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
    | Element      | Value                               |
    | :----------- | :---------------------------------- |
    | `envelopeID` | *Envelope* identifier set in step 6 |
-   | `envelope`   | Envelope created in step 7          |
+   | `envelope`   | *Envelope* created in step 7        |
    | `expiry`     | Current time + 900 seconds          |
    | `resends`    | `0`                                 |
    | `connection` | `connectionIdentifier`              |
@@ -291,14 +319,14 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 ##### 6.1.1.3. Feedback to Session Layer
 
-- Return that session initiation has taken place.
-- Return `connectionIdentifier` so that the session layer can refer to it throughout the session lifecycle.
+- Return that session invitation has been sent.
+- Return *Connection* identifier (`connectionID`) so that the session layer can refer to it throughout the session lifecycle.
 
-#### 6.1.2. Passive Node Receives Session Initiation
+#### 6.1.2. Passive Node Receives Session Invitation
 
-##### 6.1.2.1. Inbound Envelope Validation
+##### 6.1.2.1. Inbound Envelope Validation & Decryption
 
-Perform validation steps (see 5.5).
+Validate and decrypt *Envelope* (see 5.5).
 
 ##### 6.1.2.2. Acknowledge Envelope Receipt
 
@@ -329,11 +357,98 @@ Send acknowledgement (see 5.6).
 ##### 6.1.2.4. Notification to Session Layer
 
 - Notify that session invitation has been received.
-- Provide `connectionIdentifier` so that the session layer can refer to it throughout the session lifecycle.
-- Provide `ovMessage`
+- Provide *Connection* identifier (`connectionID`) so that the session layer can refer to it throughout the session lifecycle.
+- Pass `ovMessage` to session layer.
 
 
-### 6.2. Accepting a Session Initiation
+### 6.2. Responding to a Session Initiation
+
+#### 6.2.1. Passive Node Sends Session Acceptance
+
+##### 6.2.1.1. Session Layer Input
+
+| Element          | Description             | See                 |
+| :--------------- | :---------------------- | :------------------ |
+| `connectionID`   | *Connection* identifier |                     |
+| `isAccepted`     | `True`                  |                     |
+| `sessionMessage` | Session Reply Message   | OVIP-7, section 4.2 |
+
+##### 6.2.1.2. Processing steps
+
+1. Create the *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
+
+   | Element       | Value                                                        |
+   | :------------ | :----------------------------------------------------------- |
+   | `instruction` | `010`                                                        |
+   | `returnTopic` | `inboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
+   | `ovMessage`   | `sessionMessage`                                             |
+
+   
+
+2. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
+
+   | Element | Value / Specification                                        |
+   | ------- | ------------------------------------------------------------ |
+   | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
+   | `Data`  | *Message* inclusing *Payload* created in step 1, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
+
+   
+
+3. Add item to the Outbound *Envelope* Queue:</br>
+
+   | Element      | Value                               |
+   | :----------- | :---------------------------------- |
+   | `envelopeID` | *Envelope* identifier set in step 1 |
+   | `envelope`   | *Envelope* created in step 2        |
+   | `expiry`     | Current time + 900 seconds          |
+   | `resends`    | `0`                                 |
+   | `connection` | `connectionID`                      |
+
+   
+
+4. Send Envelope created in step 2.
+
+##### 6.2.1.3. Feedback to Session Layer
+
+- Return that session acceptance has been sent.
+
+#### 6.2.2. Active Node Receives Session Acceptance
+
+##### 6.2.2.1. Inbound Envelope Validation & Decryption
+
+Validate and decrypt *Envelope* (see 5.5).
+
+##### 6.2.2.2. Acknowledge Envelope Receipt
+
+Send acknowledgement (see 5.6).
+
+##### 6.2.2.3. Processing Steps
+
+1. Read 
+
+2. Update item in the set of *Connections*:</br>
+
+   | Element         | Value                                                   |
+   | :-------------- | :------------------------------------------------------ |
+   | `outboundTopic` | `returnTopic` from the *Payload* of received *Envelope* |
+
+   
+
+3. Make the *Node* listen to incoming *Envelopes* associated to this *Connection*.
+
+##### 6.1.2.4. Notification to Session Layer
+
+- Notify that session invitation has been received.
+- Provide *Connection* identifier (`connectionID`) so that the session layer can refer to it throughout the session lifecycle.
+- Pass `ovMessage` to session layer.
+
+
+
+
+
+
+
+
 
 
 
@@ -441,18 +556,6 @@ Besides the general specifications given on *Envelope*, *Message* and *Payload* 
 | `envelopeACK` | 4 bytes | `envelope` value of *Envelope* to be acknowledged |
 
 
-
-## 6. Expected Node Behavior
-
-### 6.1. Sending ACK
-
-*Nodes* must acknowledge the receipt of an each *Envelope* containing the *OpenVASP Payload* by sending an OpenVASP *Envelope* of type ACK. The only exception are *Envelopes* of type ACK, which must not be acknowledged.
-
-### 6.2. Responding to a missing ACK
-
-*Nodes* must resend an *Envelope*, for which they do not receive an ACK within the period specified in its time-to-live (TTL).
-
-*Nodes* should resend *Envelopes* not being acknowledged with increasingly larger TTL values (e.g. doubling the TTL with each resend).
 
 # Motivation
 
